--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<standard.acronym>CCRTO</standard.acronym>
 		<schema.version>1.0</schema.version>
-		<jackson.databind.version>2.5.3</jackson.databind.version>
+		<jackson.databind.version>[2.8.11.1,)</jackson.databind.version>
 		<jackson.annotations.version>2.5.0</jackson.annotations.version>
 		<slf4j.version>1.5.2</slf4j.version>
 	</properties>
